ARROW-15234: [Python] Fix crash with custom CSV invalid row handler

The crash would happen at handler destruction if called from a non-Python thread that doesn't hold the GIL.